[package]
name = "actix_server"
version = "0.1.0"
authors = ["Patryk Styla <43710236+PatrykStyla@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3.3.2"
futures = "0.3.9"
actix-service = "1.0.6"

env_logger = "0.8"
pin-project = "1.0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.4.2", features = ["runtime-async-std-native-tls", "mysql"]}

anyhow = "1.0.38"